--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -29,9 +29,20 @@
     {{{body}}}
   </div>
   <footer>
+    <div>
+      <h6>Created By:</h6>
+      <ul>
+        <li>Manuel Rocha</li>
+        <li>Matheus Carvalho</li>
+        <li>Ricardo Azevedo</li>
+      </ul>
+    </div>
     <div><a href="#">Copyright © 2020</a></div>
     <div><a href="#">Contact us</a></div>
     <div><a href="#">FAQ</a></div>
+    <div>
+      <h4>About Us</h4>
+      <p>Boardgame funs that met at IronHack and developed the future encounter site for gamers</p></div>
     <div>Social Media: <a href="#"><img src="/images/1200px-Facebook_Icon_(Single_Path_-_Transparent__f_).svg.png"
           alt="facebook logo"></a>
       <a href="#"><img src="/images/Instagram_icon.png" alt="instagram logo"></a>
