trending and events sidebar

--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -4,6 +4,10 @@
 {{title}}
 {{/each}}
 
-<h3>Next encounters</h3>
+<h3>New encounters</h3>
+{{#each eventsSide}}
 
+{{eventName}}
+
+{{/each}}
 </div>
