--- a/views/channels/singleview.hbs
+++ b/views/channels/singleview.hbs
@@ -36,19 +36,7 @@
 <div>
   <aside>
 <a href="/channels/{{channel._id}}/create_post"><button>Create a new Post</button></a>
-<h3>Trending channels</h3>
-<a href="#">Trending channel 1</a><br>
-<a href="#">Trending channel 2</a><br>
-<a href="#">Trending channel 3</a><br>
-<a href="#">Trending channel 4</a><br>
-<h4>Online Now</h4>
-<a href="#">Online player 1</a><br>
-<a href="#">Online player 2</a><br>
-<a href="#">Online player 3</a><br>
-
-
-
-
+{{>sidebar}}
   </aside>
 </div>
 </section>
