--- a/views/channels/create.hbs
+++ b/views/channels/create.hbs
@@ -10,3 +10,6 @@
   <input type="file" name="picture" id="picture" accept="image/*" multiple />
   <button>Create Channel</button>
 </form>
+<aside>
+  {{>sidebar}}
+</aside>
