--- a/views/channels/index.hbs
+++ b/views/channels/index.hbs
@@ -15,15 +15,7 @@
   <div>
     <aside>
       <a href="/channels/create"><Button>Create a new channel</Button></a>
-      <h3>Trending channels</h3>
-      <a href="#">Trending channel 1</a><br>
-      <a href="#">Trending channel 2</a><br>
-      <a href="#">Trending channel 3</a><br>
-      <a href="#">Trending channel 4</a><br>
-      <h4>Online Now</h4>
-      <a href="#">Online player 1</a><br>
-      <a href="#">Online player 2</a><br>
-      <a href="#">Online player 3</a><br>
+     {{>sidebar}}
     </aside>
   </div>
 </section>
