--- a/views/channels/posts/create.hbs
+++ b/views/channels/posts/create.hbs
@@ -12,3 +12,7 @@
   <input type="file" name="picture" id="picture" accept="image/*" multiple />
   <button>Create Post</button>
 </form>
+
+<aside>
+  {{>sidebar}}
+</aside>
