--- a/views/channels/posts/singlepost.hbs
+++ b/views/channels/posts/singlepost.hbs
@@ -28,15 +28,8 @@
   <h4>Add a Comment</h4>
   {{> commentform}}
 </div>
-<aside>
-  <h3>Trending channels</h3>
-<a href="#">Trending channel 1</a><br>
-<a href="#">Trending channel 2</a><br>
-<a href="#">Trending channel 3</a><br>
-<a href="#">Trending channel 4</a><br>
-<h4>Online Now</h4>
-<a href="#">Online player 1</a><br>
-<a href="#">Online player 2</a><br>
-<a href="#">Online player 3</a><br>
+
+ <aside>
+  {{>sidebar}}
 </aside>
 </section>
