--- a/views/encounter/single.hbs
+++ b/views/encounter/single.hbs
@@ -56,6 +56,9 @@
     <button type="submit" class="btn btn-outline-primary card-link">ADD</button>
   </form>
 </section>
+<aside>
+  {{>sidebar}}
+</aside>
 
 
   <script>
