--- a/views/private.hbs
+++ b/views/private.hbs
@@ -32,5 +32,7 @@
           });
       }
     </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrJ1f_9MB0iFA2zFsHIbIK8sGWU91aQr8&callback=initMap" async
+<script src="https://maps.googleapis.com/maps/api/js?key={{process.env.GOOGLE_MAPS_API_KEY}}&callback=initMap" async
   defer></script>
+
+  
