--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -20,6 +20,7 @@
       <button> Log Out</button>
     </form>
     {{else}}
+    <a href="/authentication/google">Log In With Google</a>
     <a href="/authentication/sign-in">Log In</a>
     <a href="/authentication/sign-up">Sign Up</a>
     {{/if}}
