--- a/views/encounter/single.hbs
+++ b/views/encounter/single.hbs
@@ -50,7 +50,7 @@
   <h5 class="form-text text-muted"> Add a Comment {{user.name}}</h5>
    <div class="form-group">
       <label for="comment" class='text-secondary'>Comment:</label>
-      <textarea type="text" name="comment" class="form-control">Please write your comment here...</textarea>
+      <textarea type="text" name="comment" class="form-control" placeholder="Please write your comment here..."></textarea>
     </div>
 
     <button type="submit" class="btn btn-outline-primary card-link">ADD</button>
