--- a/views/index.hbs
+++ b/views/index.hbs
@@ -50,9 +50,16 @@
           },
         zoom: 12
       });
+      
+
+    {{#each events}}
     for (let locationEvent of list) {
-      new window.google.maps.Marker({ position: locationEvent, map });
+      new window.google.maps.Marker({ position: {
+        lat: {{ location.coordinates.[0] }},
+        lng: {{ location.coordinates.[1] }}
+      }, map, title: '{{eventName}}, at {{date}} with {{numberOfPlayer}} players' })
     }
+    {{/each}}
     }
   </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrJ1f_9MB0iFA2zFsHIbIK8sGWU91aQr8&callback=initMap" async defer></script>
