--- a/views/private.hbs
+++ b/views/private.hbs
@@ -4,9 +4,7 @@
 <br />
 <span><strong>Email</strong>: {{user.email}}</span>
 <img src="{{user.picture}}" height="30px" width="30px" alt="profile picture">
-<h1>
-  {{ user.location.coordinates.[1] }}
-</h1>
+<div id="sample-map"></div>
 
 
 
@@ -28,7 +26,8 @@
               lat: {{user.location.coordinates.[0]}}, 
               lng: {{user.location.coordinates.[1]}}
             },
-            map
+            map,
+            title: '{{user.name}}'
           });
       }
     </script>
