--- a/views/user.hbs
+++ b/views/user.hbs
@@ -1,10 +1,6 @@
 <h1>User Profile</h1>
 <p>Olá! Esses são os jogadores próximos a você:</p>
 <div id="sample-map"></div>
-{{!-- for (let userPosition of list) {
-      new window.google.maps.Marker({ position: userPosition.position, map });
-    } --}}
-    
 
 <script>
   const $sampleMap = document.getElementById('sample-map');
@@ -32,16 +28,21 @@
       
     {{#each data}}
     for (let userSingle of list) {
-      new window.google.maps.Marker({ position: {
+      const marker =  new window.google.maps.Marker({ position: {
         lat: {{ location.coordinates.[0] }},
         lng: {{ location.coordinates.[1] }}
       }, 
       map, 
-      title: '{{name}}' 
+      title: '{{name}}'
       })
+    marker.addListener('click', () => {
+        window.location = `message/{{_id}}`;
+      })
+      
     }
     {{/each}}
-    }
+
+  }
 
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBrJ1f_9MB0iFA2zFsHIbIK8sGWU91aQr8&callback=initMap" async defer>
