--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,10 @@
 
 <body>
   <nav>
+    <div>
     <a href="/"><img src="/images/dy play one color.png" alt="Do you play logo" /></a>
+    </div>
+    <aside>
     <a href="/channels"> Channels </a>
     <a href="/encounter"> Encounter </a>
     {{#if user}}
@@ -24,6 +27,7 @@
     <a href="/authentication/sign-in">Log In</a>
     <a href="/authentication/sign-up">Sign Up</a>
     {{/if}}
+    </aside>
   </nav>
 
   <div class="bodyMain">
