message link inserted on event marker

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -54,10 +54,13 @@
 
     {{#each events}}
     for (let locationEvent of list) {
-      new window.google.maps.Marker({ position: {
+      const marker = new window.google.maps.Marker({ position: {
         lat: {{ location.coordinates.[0] }},
         lng: {{ location.coordinates.[1] }}
       }, map, title: '{{eventName}}, at {{date}} with {{numberOfPlayer}} players' })
+      marker.addListener('click', () => {
+        window.location = `/encounter/single/{{_id}}`;
+      })
     }
     {{/each}}
     }
