--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -31,5 +31,9 @@
     <div class="mapSignUp">
       {{>map}}
     </div>
+    <div>
+    <label for="inputDescription">About you:</label>
+    <textarea name="description" id="inputDescription" cols="30" rows="10"></textarea>
+    </div>
     <button>Sign Up</button>
   </form>
