--- a/views/user.hbs
+++ b/views/user.hbs
@@ -2,6 +2,8 @@
 <img src="{{user.picture}}" alt="profile picture">
 <h2>Your favorite games:</h2>
 <p>{{user.games}}.</p>
+<h3>About you:</h3>
+<p>{{user.description}}</p>
 <h3>Players near you:</h3>
 <div id="sample-map"></div>
 
