--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,20 +12,20 @@
 <body>
   <nav>
     <div>
-    <a href="/"><img src="/images/dy play one color.png" alt="Do you play logo" /></a>
+      <a href="/"><img src="/images/dy play one color.png" alt="Do you play logo" /></a>
     </div>
     <aside>
-    <a href="/channels"> Channels </a>
-    <a href="/encounter"> Encounter </a>
-    {{#if user}}
-    <a href="/private">{{user.name}}'s Profile</a>
-    <form action="/authentication/sign-out" method="POST">
-      <button> Log Out</button>
-    </form>
-    {{else}}
-    <a href="/authentication/sign-in">Log In</a>
-    <a href="/authentication/sign-up">Sign Up</a>
-    {{/if}}
+      <a href="/channels"> Channels </a>
+      <a href="/encounter"> Encounter </a>
+      {{#if user}}
+      <a href="/user">{{user.name}}'s Profile</a>
+      <form action="/authentication/sign-out" method="POST">
+        <button> Log Out</button>
+      </form>
+      {{else}}
+      <a href="/authentication/sign-in">Log In</a>
+      <a href="/authentication/sign-up">Sign Up</a>
+      {{/if}}
     </aside>
   </nav>
 
@@ -46,7 +46,8 @@
     <div><a href="#">FAQ</a></div>
     <div>
       <h4>About Us</h4>
-      <p>Boardgame funs that met at IronHack and developed the future encounter site for gamers</p></div>
+      <p>Boardgame funs that met at IronHack and developed the future encounter site for gamers</p>
+    </div>
     <div>Social Media: <a href="#"><img src="/images/1200px-Facebook_Icon_(Single_Path_-_Transparent__f_).svg.png"
           alt="facebook logo"></a>
       <a href="#"><img src="/images/Instagram_icon.png" alt="instagram logo"></a>
