--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,166 +1,54 @@
 *, *:before, *:after {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
-input,
-textarea,
-button,
-.btn {
-  border: 2px solid rgba(191, 191, 191, 0.5);
-  border-radius: 1em;
-  margin-bottom: 1em;
-  padding: 0 1em;
-  z-index: 51;
-  font: inherit;
-  color: black;
-  font-weight: bolder;
-  background-color: inherit; }
-
-body {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  font-family: sans-serif;
-  line-height: 2;
-  position: relative; }
-
-.bodyMain {
-  margin-top: 60px;
-  background-color: white;
-  min-height: 700px; }
-
-.bodyIndex {
-  align-self: center;
-  margin: 0 10%;
-  padding-bottom: 5%;
-  align-content: center; }
-  .bodyIndex .imageSignUp {
-    display: flex; }
-  .bodyIndex img {
-    width: 30%;
-    margin: 0 auto; }
-
-a {
-  color: inherit;
-  text-decoration: none; }
-
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #bfbfbf;
-  width: 100%;
-  height: 60px;
-  padding: 0 0px;
-  position: fixed;
-  z-index: 50; }
-  nav div,
-  nav a {
-    width: 150px; }
-  nav div,
-  nav aside {
-    display: flex;
-    flex-direction: row; }
-  nav button {
-    display: contents;
-    justify-content: flex-end;
-    display: flex;
-    margin-right: 2em;
-    margin: auto;
-    z-index: 45; }
-
-h1,
-h2,
-h3,
-p {
-  margin: 0;
-  line-height: inherit; }
-  h1:not(:last-child),
-  h2:not(:last-child),
-  h3:not(:last-child),
-  p:not(:last-child) {
-    margin-bottom: 1rem; }
-
-img {
-  width: 100%;
-  max-width: 100%; }
-
-form {
-  display: flex;
-  flex-direction: column; }
-
-.signUpMain {
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 10px; }
-  .signUpMain button {
-    z-index: 51;
-    margin: auto;
-    padding: 10px 20px; }
-  .signUpMain .imageSignUp {
-    max-width: 300px;
-    align-self: center; }
-  .signUpMain .signUpName {
-    display: flex;
-    flex-direction: column; }
-  .signUpMain .formMain,
-  .signUpMain .gameYouPlay {
-    align-items: center;
-    justify-content: space-evenly;
-    display: flex;
-    flex-direction: row; }
-  .signUpMain .gameYouPlay {
-    flex-direction: column;
-    margin: 0 20%; }
-  .signUpMain .listGamesSignUp {
-    display: flex;
-    flex-flow: row wrap; }
-    .signUpMain .listGamesSignUp .formInline {
-      margin: 1em;
-      justify-self: flex-start; }
-  .signUpMain .inputPicture {
-    align-self: flex-start;
-    display: flex;
-    flex-direction: column; }
-  .signUpMain .mapSignUp {
-    margin: 0px;
-    max-width: 1200px;
-    align-self: center; }
-
-.LatLng {
+body nav {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: space-around; }
-
-#sample-map {
-  width: 1000px;
-  height: 500px; }
-
-.signInMain {
-  margin: 0 20%; }
-
-textarea {
-  min-height: 8em;
-  resize: vertical; }
-
-.imageSignIn {
-  max-width: 300px;
-  align-self: center;
-  margin: 0 auto; }
-
-footer {
-  position: relative;
-  display: flex;
-  width: 100%;
+  align-items: left;
   justify-content: space-between;
-  background-color: inherit;
-  padding: 0 20px;
-  height: 30px;
-  bottom: 0; }
-  footer img {
-    width: 20px; }
-    footer img:last-child {
-      margin-right: 0.5em; }
+  background-color: #cccccc;
+  width: 100%;
+  height: 60px;
+  position: fixed;
+  border-radius: 0px 0px 30px 30px; }
+  body nav img {
+    height: 60px; }
+  body nav aside {
+    display: flex;
+    flex-direction: row;
+    padding: 20px; }
+    body nav aside a {
+      display: flex;
+      flex-direction: row;
+      align-self: center;
+      padding: 0 10px;
+      text-decoration: none;
+      color: black; }
+    body nav aside a:hover {
+      text-decoration: none;
+      color: purple;
+      transform: scale(1.1); }
+    body nav aside button {
+      background: none;
+      color: black;
+      border: 3px solid rgba(116, 113, 113, 0.5);
+      border-radius: 15px;
+      padding: 5;
+      font-style: none;
+      outline: inherit;
+      z-index: 60; }
+    body nav aside button:hover {
+      transform: scale(0.9) perspective(1px);
+      transition-timing-function: ease-out;
+      color: purple; }
+
+body footer {
+  background-color: #cccccc;
+  display: flex;
+  flex-direction: row; }
+  body footer a img {
+    width: 15px; }
 
 .sectionComments {
   display: flex;
