--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1,212 +1,75 @@
 $font-sans: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $grey: hsla(0, 0, 75%, 0.5);
-$fullgrey: hsla(0, 0, 75%, 1);
+$fullgrey: hsla(0, 0, 80%, 1);
 
 * {
   &,
   &:before,
   &:after {
     box-sizing: border-box;
+    font-family: $font-sans;
   }
-}
-
-input,
-textarea,
-button,
-.btn {
-  border: 2px solid $grey;
-  border-radius: 1em;
-  margin-bottom: 1em;
-  padding: 0 1em;
-  z-index: 51;
-  font: inherit;
-  color: black;
-  font-weight: bolder;
-  background-color: inherit;
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  font-family: sans-serif;
-  line-height: 2;
-  position: relative;
-}
-
-.bodyMain {
-  margin-top: 60px;
-  background-color: white;
-  min-height: 700px;
-}
-.bodyIndex {
-  align-self: center;
-  margin: 0 10%;
-  padding-bottom: 5%;
-  align-content: center;
-  .imageSignUp {
-    display: flex;
-  }
-  img {
-    width: 30%;
-    margin: 0 auto;
-  }
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: $fullgrey;
-  width: 100%;
-  height: 60px;
-  padding: 0 0px;
-  position: fixed;
-  z-index: 50;
-  div,
-  a {
-    width: 150px;
-  }
-  div,
-  aside {
-		display: flex;
-		flex-direction: row;
-		}
-  button {
-    display: contents;
-    justify-content: flex-end;
-    display: flex;
-    margin-right: 2em;
-    margin: auto;
-    z-index: 45;
- 
-  }
-}
-
-h1,
-h2,
-h3,
-p {
-  margin: 0;
-  line-height: inherit;
-  &:not(:last-child) {
-    margin-bottom: 1rem;
-  }
-}
-
-img {
-  width: 100%;
-  max-width: 100%;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-}
-
-.signUpMain {
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 10px;
-  button {
-    z-index: 51;
-    margin: auto;
-    padding: 10px 20px;
-  }
-  .imageSignUp {
-    max-width: 300px;
-    align-self: center;
-  }
-  .signUpName {
-    display: flex;
-    flex-direction: column;
-  }
-  .formMain,
-  .gameYouPlay {
-    align-items: center;
-    justify-content: space-evenly;
+  nav {
     display: flex;
     flex-direction: row;
-  }
-  .gameYouPlay {
-    flex-direction: column;
-    margin: 0 20%;
-  }
-  .listGamesSignUp {
-    display: flex;
-    flex-flow: row wrap;
-
-    .formInline {
-      margin: 1em;
-      justify-self: flex-start;
+    align-items: left;
+    justify-content: space-between;
+    background-color: $fullgrey;
+    width: 100%;
+    height: 60px;
+    position: fixed;
+    border-radius: 0px 0px 30px 30px;
+    img {
+      height: 60px;
+    }
+    aside {
+      display: flex;
+      flex-direction: row;
+      padding: 20px;
+      a {
+        display: flex;
+        flex-direction: row;
+        align-self: center;
+        padding: 0 10px;
+        text-decoration: none;
+        color: rgb(0, 0, 0);
+      }
+      a:hover {
+        text-decoration: none;
+        color: rgb(128, 0, 128);
+        transform: scale(1.1);
+      }
+      button {
+        background: none;
+        color: black;
+        border: 3px solid rgba(116, 113, 113, 0.5);
+        border-radius: 15px;
+        padding: 5;
+        font-style: none;
+        outline: inherit;
+        z-index: 60;
+      }
+      button:hover {
+        transform: scale(0.9) perspective(1px);
+        transition-timing-function: ease-out;
+        color: rgb(128, 0, 128);
+      }
     }
   }
-  .inputPicture {
-    align-self: flex-start;
+
+  footer {
+    background-color: $fullgrey;
     display: flex;
-    flex-direction: column;
-  }
-  .mapSignUp {
-    margin: 0px;
-    max-width: 1200px;
-    align-self: center;
-  }
-}
+    flex-direction: row;
 
-.LatLng {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-}
-
-#sample-map {
-  width: 1000px;
-  height: 500px;
-}
-
-.signInMain {
-  margin: 0 20%;
-}
-
-textarea {
-  min-height: 8em;
-  resize: vertical;
-}
-
-.imageSignIn {
-  max-width: 300px;
-  align-self: center;
-  margin: 0 auto;
-}
-
-// .form-group,
-// .list-group-flush,
-// .signInMain,
-//  {
-// 	min-height: 560px;
-// }
-
-footer {
-  position: relative;
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  background-color: inherit;
-  padding: 0 20px;
-  height: 30px;
-  bottom: 0;
-
-  img {
-    &:last-child {
-      margin-right: 0.5em;
+    a {
+      img {
+        width: 15px;
+      }
     }
-    width: 20px;
   }
 }
 
