--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,16 +12,17 @@
 <body>
   <nav>
     <div>
-    <a href="/"><img src="/images/dy play one color.png" alt="Do you play logo" /></a>
+    <a class="logo" href="/"><img src="/images/dy play one color.png" alt="Do you play logo" /></a>
     </div>
     <aside>
     <a href="/channels"> Channels </a>
     <a href="/encounter"> Encounter </a>
     {{#if user}}
     <a href="/private">{{user.name}}'s Profile</a>
-    <form action="/authentication/sign-out" method="POST">
+    <a><form action="/authentication/sign-out" method="POST">
       <button> Log Out</button>
-    </form>
+    </form> </a>
+    
     {{else}}
     <a href="/authentication/google">Log In With Google</a>
     <a href="/authentication/sign-in">Log In</a>
@@ -33,6 +34,7 @@
   <div class="bodyMain">
     {{{body}}}
   </div>
+
   <footer>
     <div>
       <h6>Created By:</h6>
@@ -42,11 +44,11 @@
         <li>Ricardo Azevedo</li>
       </ul>
     </div>
-    <div><a href="#">Copyright © 2020</a></div>
-    <div><a href="#">Contact us</a></div>
-    <div><a href="#">FAQ</a></div>
+    <a href="#">Copyright © 2020</a>
+    <a href="#">Contact us</a>
+    
     <div>
-      <h4>About Us</h4>
+      <h6>About Us</h6>
       <p>Boardgame funs that met at IronHack and developed the future encounter site for gamers</p></div>
     <div>Social Media: <a href="#"><img src="/images/1200px-Facebook_Icon_(Single_Path_-_Transparent__f_).svg.png"
           alt="facebook logo"></a>
