--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -44,8 +44,8 @@
         <li>Ricardo Azevedo</li>
       </ul>
     </div>
-    <div></div><a href="#">Copyright © 2020</a></div>
-    <div><a href="#">Contact us</a></div>
+    </div><a href="#">Copyright © 2020</a>
+    <a href="#">Contact us</a>
     
     <div>
       <h6>About Us</h6>
