--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -2,53 +2,56 @@
   box-sizing: border-box;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
-body nav {
-  display: flex;
-  flex-direction: row;
-  align-items: left;
-  justify-content: space-between;
-  background-color: #cccccc;
-  width: 100%;
-  height: 60px;
-  position: fixed;
-  border-radius: 0px 0px 30px 30px; }
-  body nav img {
-    height: 60px; }
-  body nav aside {
+body {
+  z-index: 1; }
+  body nav {
     display: flex;
     flex-direction: row;
-    padding: 20px; }
-    body nav aside a {
+    align-items: left;
+    justify-content: space-between;
+    background-color: #cccccc;
+    width: 100%;
+    height: 60px;
+    position: fixed;
+    border-radius: 0px 0px 30px 30px; }
+    body nav img {
+      height: 60px; }
+    body nav aside {
       display: flex;
       flex-direction: row;
-      align-self: center;
-      padding: 0 10px;
-      text-decoration: none;
-      color: black; }
-    body nav aside a:hover {
-      text-decoration: none;
-      color: purple;
-      transform: scale(1.1); }
-    body nav aside button {
-      background: none;
-      color: black;
-      border: 3px solid rgba(116, 113, 113, 0.5);
-      border-radius: 15px;
-      padding: 5;
-      font-style: none;
-      outline: inherit;
-      z-index: 60; }
-    body nav aside button:hover {
-      transform: scale(0.9) perspective(1px);
-      transition-timing-function: ease-out;
-      color: purple; }
-
-body footer {
-  background-color: #cccccc;
-  display: flex;
-  flex-direction: row; }
-  body footer a img {
-    width: 15px; }
+      padding: 20px; }
+      body nav aside a {
+        display: flex;
+        flex-direction: row;
+        align-self: center;
+        padding: 0 10px;
+        text-decoration: none;
+        color: black; }
+      body nav aside a:hover {
+        text-decoration: none;
+        color: purple;
+        transform: scale(1.1); }
+      body nav aside button {
+        background: none;
+        color: black;
+        border: 3px solid rgba(116, 113, 113, 0.5);
+        border-radius: 15px;
+        padding: 5;
+        font-style: none;
+        outline: inherit;
+        z-index: 60; }
+      body nav aside button:hover {
+        transform: scale(0.9) perspective(1px);
+        transition-timing-function: ease-out;
+        color: purple; }
+  body div {
+    z-index: 99999; }
+  body footer {
+    background-color: #cccccc;
+    display: flex;
+    flex-direction: row; }
+    body footer a img {
+      width: 15px; }
 
 .sectionComments {
   display: flex;
@@ -80,5 +83,20 @@ body footer {
 
 .channelImg {
   width: 50px; }
+
+.mapSignUp {
+  margin: 0px;
+  max-width: 1200px;
+  align-self: center; }
+
+.LatLng {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around; }
+
+#sample-map {
+  width: 1000px;
+  height: 500px; }
 
 /*# sourceMappingURL=style.css.map */
