--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,11 +9,12 @@
   <link rel="stylesheet" href="/styles/style.css" />
 </head>
 
-<body>
+<body class="allContent">
   <nav>
     <div>
     <a class="logo" href="/"><img src="/images/dy play one color.png" alt="Do you play logo" /></a>
     </div>
+
     <aside>
     <a href="/channels"> Channels </a>
     <a href="/encounter"> Encounter </a>
@@ -31,7 +32,7 @@
     </aside>
   </nav>
 
-  <div class="bodyMain">
+  <div >
     {{{body}}}
   </div>
 
