--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -3,17 +3,20 @@ $grey: hsla(0, 0, 75%, 0.5);
 $fullgrey: hsla(0, 0, 80%, 1);
 
 * {
-  &,
-  &:before,
-  &:after {
-    box-sizing: border-box;
-    font-family: $font-sans;
-  }
+  box-sizing: border-box;
+  font-family: $font-sans;
+}
+.allcontent {
+  margin-top: 0px;
 }
 
 body {
   z-index: 1;
+  margin-top: 0;
+
   nav {
+    margin-top: 0;
+    z-index: 50;
     display: flex;
     flex-direction: row;
     align-items: left;
@@ -21,7 +24,9 @@ body {
     background-color: $fullgrey;
     width: 100%;
     height: 60px;
-    position: fixed;
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
     border-radius: 0px 0px 30px 30px;
     img {
       height: 60px;
@@ -108,11 +113,13 @@ body {
 .channelImg {
   width: 50px;
 }
+// don't mess with this
 
 .mapSignUp {
   margin: 0px;
   max-width: 1200px;
   align-self: center;
+  z-index: 40;
 }
 
 .LatLng {
@@ -120,9 +127,11 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: space-around;
+  z-index: 41;
 }
 
 #sample-map {
   width: 1000px;
   height: 500px;
+  z-index: 40;
 }
