--- a/views/user.hbs
+++ b/views/user.hbs
@@ -6,7 +6,7 @@
 <p>{{user.description}}</p>
 <h3>Players near you:</h3>
 <div id="sample-map"></div>
-
+<form action="/authentication/deleteAccount" method="POST"><button>Delete Account</button></form>
 <script>
   const $sampleMap = document.getElementById('sample-map');
 
