--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -31,7 +31,7 @@
     </div>
     <div>
     <label for="inputDescription">About you:</label>
-    <textarea name="description" id="inputDescription" cols="30" rows="10" value="{{user.description}}"></textarea>
+    <textarea name="description" id="inputDescription" cols="30" rows="10">{{user.description}}</textarea>
     </div>
     <button>Confirm</button>
   </form>
