--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -13,6 +13,10 @@ $fullgrey: hsla(0, 0, 80%, 1);
 body {
   z-index: 1;
   margin-top: 0;
+  align-items: center;
+  h1 {
+    text-align: center;
+  }
 
   nav {
     margin-top: 0;
@@ -65,9 +69,6 @@ body {
       }
     }
   }
-  div {
-    z-index: 99999;
-  }
 
   footer {
     background-color: $fullgrey;
@@ -81,6 +82,23 @@ body {
     }
   }
 }
+.names {
+  font-size: 0.7em;
+}
+
+h1 {
+  padding: 0.5em;
+  align-items: center;
+}
+
+h3 {
+  align-items: left;
+  text-align: left;
+}
+.indexImg {
+  width: 600px;
+  justify-content: center;
+}
 
 .sectionComments {
   display: flex;
@@ -89,12 +107,13 @@ body {
   align-items: top;
   margin: 2em;
 }
-.channel {
+.content {
   display: flex;
   flex-direction: column;
   justify-content: center;
   justify-self: center;
   align-items: top;
+  padding-right: 3em;
 }
 .channelDesc {
   display: flex;
@@ -117,7 +136,7 @@ body {
 
 .mapSignUp {
   margin: 0px;
-  max-width: 1200px;
+  max-width: 1100px;
   align-self: center;
   z-index: 40;
 }
@@ -131,7 +150,7 @@ body {
 }
 
 #sample-map {
-  width: 1000px;
+  width: 900px;
   height: 500px;
   z-index: 40;
 }
