--- a/views/channels/index.hbs
+++ b/views/channels/index.hbs
@@ -2,7 +2,7 @@
 <section class="sectionComments">
 
 
-  <div class="channel">
+  <div class="content">
 
     {{#each data}}
     <aside class="channelProp">
