--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -32,14 +32,14 @@
     </aside>
   </nav>
 
-  <div >
+  <div>
     {{{body}}}
   </div>
 
   <footer>
     <div>
       <h6>Created By:</h6>
-      <ul>
+      <ul class="names">
         <li>Manuel Rocha</li>
         <li>Matheus Carvalho</li>
         <li>Ricardo Azevedo</li>
@@ -51,11 +51,7 @@
     <div>
       <h6>About Us</h6>
       <p>Boardgame funs that met at IronHack and developed the future encounter site for gamers</p></div>
-    <div>Social Media: <a href="#"><img src="/images/1200px-Facebook_Icon_(Single_Path_-_Transparent__f_).svg.png"
-          alt="facebook logo"></a>
-      <a href="#"><img src="/images/Instagram_icon.png" alt="instagram logo"></a>
-    </div>
-  </footer>
+      </footer>
   <script src="/scripts/script.js"></script>
 </body>
 
