--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -7,7 +7,10 @@
 
 body {
   z-index: 1;
-  margin-top: 0; }
+  margin-top: 0;
+  align-items: center; }
+  body h1 {
+    text-align: center; }
   body nav {
     margin-top: 0;
     z-index: 50;
@@ -53,14 +56,27 @@ body {
         transform: scale(0.9) perspective(1px);
         transition-timing-function: ease-out;
         color: purple; }
-  body div {
-    z-index: 99999; }
   body footer {
     background-color: #cccccc;
     display: flex;
     flex-direction: row; }
     body footer a img {
       width: 15px; }
+
+.names {
+  font-size: 0.7em; }
+
+h1 {
+  padding: 0.5em;
+  align-items: center; }
+
+h3 {
+  align-items: left;
+  text-align: left; }
+
+.indexImg {
+  width: 600px;
+  justify-content: center; }
 
 .sectionComments {
   display: flex;
@@ -69,12 +85,13 @@ body {
   align-items: top;
   margin: 2em; }
 
-.channel {
+.content {
   display: flex;
   flex-direction: column;
   justify-content: center;
   justify-self: center;
-  align-items: top; }
+  align-items: top;
+  padding-right: 3em; }
 
 .channelDesc {
   display: flex;
@@ -95,7 +112,7 @@ body {
 
 .mapSignUp {
   margin: 0px;
-  max-width: 1200px;
+  max-width: 1100px;
   align-self: center;
   z-index: 40; }
 
@@ -107,7 +124,7 @@ body {
   z-index: 41; }
 
 #sample-map {
-  width: 1000px;
+  width: 900px;
   height: 500px;
   z-index: 40; }
 
