GOOGLE SIGn up at sign up page

--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -1,6 +1,6 @@
 <div>
   <div><img src="/images/dy play one color.png" alt="logo"></div>
-
+  <a href="/authentication/google">Log In With Google</a>
   <form action="/authentication/sign-up" method="POST" enctype="multipart/form-data">
     <div>
       <div>
