--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -2,7 +2,8 @@ $font-sans: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $grey: hsla(0, 0, 10%, 1);
 $fullgrey: hsla(0, 0, 70%, 1);
 $titlesGrey: hsla(0, 0, 80%, 1);
-* {
+$roxo: rgb(170, 7, 170);
+ * {
   box-sizing: border-box;
   font-family: $font-sans;
 }
