--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,5 +1,5 @@
-<h1>Edit</h1>
-<p>Edit you profile:</p>
+<h1>Manage Your Profile</h1>
+<p>Please fill all the items:</p>
   <form action="/user" method="POST" enctype="multipart/form-data">
     <div class="formMain">
       <div class="signUpName">
