--- a/views/user.hbs
+++ b/views/user.hbs
@@ -6,6 +6,8 @@
 <p>{{user.description}}</p>
 <h3>Players near you:</h3>
 <div id="sample-map"></div>
+<br>
+<form action="/edit" method="GET"><button>Manage Your Account</button></form>
 <form action="/authentication/deleteAccount" method="POST"><button>Delete Account</button></form>
 <script>
   const $sampleMap = document.getElementById('sample-map');
