--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,13 +8,13 @@
   
 {{#if user}}
 <div class="map">
-<h4> Events near you </h4>
+<h2> Events near you </h2>
 <div id="sample-map"></div>
 </div>
 
 {{else}}
 <div>
-  <div><img class="indexImg" src="/images/dy play one color.png" alt="logo"></div>
+  <div class="indexText"><img class="indexImg" src="/images/dy play one color.png" alt="logo"></div>
   <h2>Welcome to DYPlay</h2>
   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In natus consequuntur similique sit debitis perferendis
     quos repellendus doloribus aliquid. Quos dignissimos eveniet rerum officia aut perspiciatis minima magnam veritatis
