--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -45,8 +45,12 @@
         <li>Ricardo Azevedo</li>
       </ul>
     </div>
-    </div><a href="#">Copyright © 2020</a>
-    <a href="#">Contact us</a>
+    </div>
+    <p>Copyright © 2020</p>
+    <p>Contact us
+  <br>
+  dyplay.boardgamehub@gmail.com
+    </p>
     
     <div>
       <h6>About Us</h6>
