--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1,6 +1,6 @@
 $font-sans: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $grey: hsla(0, 0, 10%, 1);
-$fullgrey: hsla(0, 0, 70%, 1);
+$fullgrey: hsla(0, 0, 70%, 0.11);
 $titlesGrey: hsla(0, 0, 80%, 1);
 $roxo: rgb(170, 7, 170);
 * {
@@ -74,9 +74,11 @@ body {
   }
 
   footer {
+    padding-top: 10px;
     background-color: $grey;
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
 
     a {
       img {
@@ -91,6 +93,7 @@ body {
 
 h1 {
   padding: 0.5em;
+  font-size: 4em;
   align-items: center;
 }
 
@@ -101,6 +104,11 @@ h3 {
 .indexImg {
   width: 600px;
   justify-content: center;
+}
+.indexText {
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .sectionComments {
@@ -171,4 +179,22 @@ h3 {
   padding: 2em;
   border-radius: 20px 0 0 20px;
   margin-left: 0em;
+}
+.sidebarLinkBackground {
+  background-color: $fullgrey;
+  width: 100%;
+  height: 100%px;
+  padding: 10px;
+  margin-bottom: 15px;
+  border-radius: 10px;
+}
+.sidebarLinks {
+  color: $roxo;
+  font-size: 1em;
+  font-weight: bolder;
+}
+.sidebarLinks:hover {
+  word-break: break-word;
+  text-decoration: none;
+  color: purple;
 }
