--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -1,13 +1,17 @@
 <div>
-<h3>Trending Posts</h3>
+<h4>Trending Posts</h4>
 {{#each postSide}}
-{{title}}
+<div class="sidebarLinkBackground">
+<a class="sidebarLinks" href="/channels/{{channel._id}}/{{_id}}">{{title}}</a><br>
+</div>
+
+
 {{/each}}
 
-<h3>New encounters</h3>
+<h4>New encounters</h4>
 {{#each eventsSide}}
-
-{{eventName}}
-
+<div class="sidebarLinkBackground">
+<a class="sidebarLinks" href="/encounter/single/{{_id}}">{{eventName}}</a><br>
+</div>
 {{/each}}
 </div>
