--- a/views/sign-in.hbs
+++ b/views/sign-in.hbs
@@ -1,5 +1,5 @@
-<div class="imageSignIn"><img src="/images/dy play one color.png" alt="logo"></div>
-<div class="signInMain">
+<div class="indexImg"><img src="/images/dy play one color.png" alt="logo"></div>
+<div>
   <form action="/authentication/sign-in" method="POST">
     <label for="input-email">Email</label>
     <input type="email" id="input-email" name="email" placeholder="Your Email" />
