--- a/views/partials/map.hbs
+++ b/views/partials/map.hbs
@@ -1,10 +1,10 @@
 <div id="sample-map"></div>
 <div class="LatLng">
   <div>
-    Latitude:<br> <input type="number" value=lat step=0.00000000000001 name="lat" id="lat">
+    Latitude:<br> <input type="number" value=lat step=0.0000000000000001 name="lat" id="lat" required="true">
   </div>
   <div>
-    Longitude:<br><input type="number" value=lng step=0.000000000000001 name="lng" id="lng">
+    Longitude:<br><input type="number" value=lng step=0.0000000000000001 name="lng" id="lng" required="true">
   </div>
 </div>
 
