--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -1,7 +1,7 @@
 <div>
   <div><img src="/images/dy play one color.png" alt="logo"></div>
   <a href="/authentication/google">Log In With Google</a>
-  <form action="/authentication/sign-up" method="POST" enctype="multipart/form-data">
+  <form action="/authentication/edit" method="POST" enctype="multipart/form-data">
     <div>
       <div>
         <label for="input-name">Name</label>
@@ -13,7 +13,7 @@
       </div>
       <div>
         <label for="input-picture">Profile picture:<br></label>
-        <input type="file" accept="image/*" id="input-picture" name="picture" />
+        <input type="file" accept="image/*" id="input-picture" name="picture" required="true" />
       </div>
     </div>
     <div>
@@ -37,5 +37,5 @@
     <button>Sign Up</button>
   </form>
 
-  <a href="/authentication/google">Log In With Google</a>
+  <a href="/authentication/google">Log-in with google</a>
 </div>
