--- a/views/sign-up.hbs
+++ b/views/sign-up.hbs
@@ -1,7 +1,7 @@
 <div>
   <div><img src="/images/dy play one color.png" alt="logo"></div>
   <a href="/authentication/google">Log In With Google</a>
-  <form action="/authentication/edit" method="POST" enctype="multipart/form-data">
+  <form action="/authentication/sign-up" method="POST" enctype="multipart/form-data">
     <div>
       <div>
         <label for="input-name">Name</label>
