--- a/views/sign-in.hbs
+++ b/views/sign-in.hbs
@@ -1,4 +1,6 @@
-<div class="indexImg"><img src="/images/dy play one color.png" alt="logo"></div>
+<div  class="sectionComments">
+  <div class="content">
+<div><img class="indexImg" src="/images/dy play one color.png" alt="logo"></div>
 <div>
   <form action="/authentication/sign-in" method="POST">
     <label for="input-email">Email</label>
@@ -10,6 +12,9 @@
 
 
   <a href="/authentication/google">Log In With Google</a>
-
 </div>
+</div>
+</div>
+
+
 
