--- a/views/user.hbs
+++ b/views/user.hbs
@@ -7,7 +7,7 @@
 <h3>Players near you:</h3>
 <div id="sample-map"></div>
 <br>
-<form action="/edit" method="GET"><button>Manage Your Account</button></form>
+<form action="/authentication/edit" method="GET"><button>Manage Your Account</button></form>
 <form action="/authentication/deleteAccount" method="POST"><button>Delete Account</button></form>
 <script>
   const $sampleMap = document.getElementById('sample-map');
