--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,6 +1,6 @@
 <h1>Manage Your Account</h1>
 <p>Please fill all the items bellow:</p>
-<form action="/edit" method="POST" enctype="multipart/form-data">
+<form action="/authentication/edit" method="POST" enctype="multipart/form-data">
   <div class="formMain">
     <div class="signUpName">
       <label for="input-name">Edit name</label>
