--- a/views/channels/singleview.hbs
+++ b/views/channels/singleview.hbs
@@ -3,16 +3,15 @@
 </h1>
 
 <section class="sectionComments">
-  <div class="channel">
+  <div class="channel background">
 
 <aside class= "channelDesc">
 {{#with channel}}
-<aside style="background-image:url({{picture}})">
-{{name}}
-{{#if picture}}
-<img class="channelImg" src="{{picture}}" alt="{{name}}">
-{{/if}}
-{{description}}
+<aside style="background-image:url({{picture}}); height: 500px; background-repeat: no-repeat; background-size: cover; ">
+<div class="inImage">
+<h2>{{name}}</h2><br>
+<h4>{{description}}</h4>
+</div>
 </aside>
 
 {{/with}}
@@ -34,8 +33,8 @@
 
 </div>
 <div>
-  <aside>
-<a href="/channels/{{channel._id}}/create_post"><button>Create a new Post</button></a>
+  <aside class="asideBar">
+<a href="/channels/{{channel._id}}/create_post"><button class="asideBtn">Create a new Post</button></a>
 {{>sidebar}}
   </aside>
 </div>
